@@ -1454,7 +1454,7 @@ static gboolean show_history_menu(gpointer data)
     gchar* primary_temp = gtk_clipboard_wait_for_text(primary);
     gchar* clipboard_temp = gtk_clipboard_wait_for_text(clipboard);
     /* Reverse history if enabled */
-    if (get_pref_int32("reverse_history")) {
+    if (0 && get_pref_int32("reverse_history")) {
       /*history_list = g_list_reverse(history_list); */
       element_number = g_list_length(history_list) - 1;
     }
@@ -1557,9 +1557,9 @@ static gboolean show_history_menu(gpointer data)
       /* Prepare for next item */
       g_string_free(string, TRUE);
 next_loop:
-      if (get_pref_int32("reverse_history"))
+      /** if (get_pref_int32("reverse_history"))
         element_number--;
-      else
+      else*/
         element_number++;
     }	/**end of for loop for each history item  */
     /* Cleanup */
@@ -1623,7 +1623,10 @@ next_loop:
   gtk_widget_show_all(menu);
   gtk_menu_popup((GtkMenu*)menu, NULL, NULL, get_pref_int32("history_pos")?postition_history:NULL, NULL, 1, gtk_get_current_event_time());
 	/**set last entry at first -fixes bug 2974614 */
-	gtk_menu_shell_select_first((GtkMenuShell*)menu, TRUE);
+	if(get_pref_int32("reverse_history") && NULL != h.clip_item)
+		gtk_menu_shell_select_item((GtkMenuShell*)menu,h.clip_item);
+	else	
+		gtk_menu_shell_select_first((GtkMenuShell*)menu, TRUE);
   /* Return FALSE so the g_timeout_add() function is called only once */
   return FALSE;
 }
