@@ -1,5 +1,8 @@
 V1.1.5 Friday, January 25 2013
  +Added ppa script.
+ +Updated German Translation fro patch by Christoph Wickert.
+ +Fixed bug #79, reverse order doesn't work.
+ 
 V1.1.4 Saturday, January 19 2013
  Changes
  +Fixed Visual deselection bug where parcellite was doing unnecessary updates.
